// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Operation default actionType: toObject 1`] = `
Object {
  "actionType": undefined,
  "args": Array [
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "many",
      "name": "fields",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
  ],
  "custom": false,
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "execute": Array [],
    },
    "entity": "User",
  },
  "name": "updateUser",
  "payload": Array [
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "many",
      "name": "result",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
  ],
  "title": undefined,
}
`;

exports[`Operation default actionType: toObject 2`] = `
Object {
  "actionType": undefined,
  "args": Array [
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "many",
      "name": "fields",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
  ],
  "custom": false,
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "execute": Array [],
    },
    "entity": "User",
  },
  "name": "updateUser",
  "payload": Array [
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "many",
      "name": "result",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
  ],
  "title": undefined,
}
`;

exports[`Operation default: toObject 1`] = `
Object {
  "actionType": "create",
  "args": Array [
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "many",
      "name": "fields",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
  ],
  "custom": false,
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "execute": Array [],
    },
    "entity": "User",
  },
  "name": "updateUser",
  "payload": Array [
    Object {
      "description": undefined,
      "metadata": Object {
        "required": false,
      },
      "multiplicity": "many",
      "name": "result",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
  ],
  "title": undefined,
}
`;
